@@ -1,12 +1,12 @@
-# $NetBSD: buildlink3.mk,v 1.13 2012/10/02 17:11:09 tron Exp $
+# $NetBSD: buildlink3.mk,v 1.14 2012/10/08 23:00:46 adam Exp $
 
 BUILDLINK_TREE+=	eog
 
 .if !defined(EOG_BUILDLINK3_MK)
 EOG_BUILDLINK3_MK:=
 
-BUILDLINK_API_DEPENDS.eog+=	eog>=2.30.2
-BUILDLINK_ABI_DEPENDS.eog+=	eog>=2.32.1nb13
+BUILDLINK_API_DEPENDS.eog+=	eog>=2.30.2<3
+BUILDLINK_ABI_DEPENDS.eog+=	eog>=2.32.1nb13<3
 BUILDLINK_PKGSRCDIR.eog?=	../../graphics/eog
 
 .include "../../devel/GConf/buildlink3.mk"
