@@ -1,20 +1,18 @@
-# $NetBSD: Makefile,v 1.17 2012/10/03 21:56:46 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2012/10/08 09:57:33 asau Exp $
 #
 
-DISTNAME=		Locale-Maketext-1.13
+DISTNAME=		Locale-Maketext-1.23
 PKGNAME=		p5-${DISTNAME}
-PKGREVISION=		4
 SVR4_PKGNAME=		p5lmt
 CATEGORIES=		misc perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Locale/}
 
-PKG_FAIL_REASON=	"In Perl5 Core since 5.10.1"
-
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://search.cpan.org/dist/Locale-Maketext/
 COMMENT=		Perl framework for localization
+LICENSE=		${PERL5_LICENSE}
 
-DEPENDS+=		{perl>=5.10.0,p5-I18N-LangTags>=0.30}:../../misc/p5-I18N-LangTags
+DEPENDS+=		{perl>=5.8.5,p5-I18N-LangTags>=0.31}:../../misc/p5-I18N-LangTags
 
 PERL5_PACKLIST=		auto/Locale-Maketext/.packlist
 
